minikube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: NodePort
  selector:
    app: hello
    version: v1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
